# opencl-sample

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: App.cpp  App.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp  main.cpp
